<resources>
    <string name="app_name">SmoochApp</string>
    <string name="background_image">background_image</string>
    <string name="logo_image">logo_image</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">mens</string>
    <string name="womens">womens</string>
    <string name="co_ed">co-ed</string>
    <string name="next">next</string>
</resources>
