<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="201dp"
            android:layout_height="34dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo_image"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="48sp"
            android:textColor="@android:color/white" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="223dp"
            android:layout_height="56dp"
            android:id="@+id/textView2" android:textSize="24sp"
            android:textColor="@android:color/white" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:id="@+id/getStarted_btn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:background="@drawable/swoosh_button"
            android:textColor="@android:color/white" android:textSize="20sp" tools:onClick="getStarted_clicked"/>
</android.support.constraint.ConstraintLayout>